name:                  postgrest
description:           Reads the schema of a PostgreSQL database and creates RESTful routes
                       for the tables and views, supporting all HTTP verbs that security
                       permits.
version:               5.2.0
synopsis:              REST API for any Postgres database
license:               MIT
license-file:          LICENSE
author:                Joe Nelson, Adam Baker
homepage:              https://postgrest.org
maintainer:            Steve Chávez <stevechavezast@gmail.com>
bug-reports:           https://github.com/PostgREST/postgrest/issues
category:              Executable, PostgreSQL, Network APIs
extra-source-files:    CHANGELOG.md
build-type:            Simple
cabal-version:         >=1.10
source-repository head
  type: git
  location: git://github.com/PostgREST/postgrest.git

Flag CI
  Description: No warnings allowed in continuous integration
  Manual:      True
  Default:     False

executable postgrest
  main-is:             Main.hs
  default-extensions:  OverloadedStrings, QuasiQuotes, NoImplicitPrelude
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -I2"
  default-language:    Haskell2010
  build-depends:       auto-update
                     , base
                     , hasql
                     , hasql-pool
                     , hasql-transaction
                     , postgrest
                     , protolude
                     , text
                     , time
                     , warp
                     , bytestring
                     , base64-bytestring
                     , retry
  if !os(windows)
    build-depends:     unix

  hs-source-dirs:      main

library
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, QuasiQuotes, NoImplicitPrelude
  build-depends:       aeson
                     , ansi-wl-pprint
                     , base
                     , base64-bytestring
                     , bytestring
                     , case-insensitive
                     , cassava
--                      , configurator-ng
                     , optparse-applicative
                     , dhall
--
                     , containers
                     , contravariant
                     , contravariant-extras
                     , either
                     , gitrev
                     , hasql
                     , hasql-pool
                     , hasql-transaction
                     , heredoc
                     , HTTP
                     , http-types
                     , insert-ordered-containers
                     , interpolatedstring-perl6
                     , jose
                     , lens
                     , lens-aeson
                     , network-uri
                     , optparse-applicative
                     , parsec
                     , protolude
                     , Ranged-sets
                     , regex-tdfa
                     , scientific
                     , swagger2
                     , text
                     , time
                     , unordered-containers
                     , vector
                     , wai
                     , wai-cors
                     , wai-extra
                     , wai-middleware-static
                     , cookie

  Other-Modules:       Paths_postgrest
  Exposed-Modules:     PostgREST.ApiRequest
                     , PostgREST.App
                     , PostgREST.Auth
                     , PostgREST.Config
                     , PostgREST.DbStructure
                     , PostgREST.DbRequestBuilder
                     , PostgREST.Error
                     , PostgREST.Middleware
                     , PostgREST.OpenAPI
                     , PostgREST.Parsers
                     , PostgREST.QueryBuilder
                     , PostgREST.RangeQuery
                     , PostgREST.Types
  hs-source-dirs:      src
